--- a/index.html
+++ b/index.html
@@ -104,6 +104,36 @@
     </div>
 </div><!-- End Hero -->
 
+    
+    
+<ul id="social-sidebar">
+
+    <li>
+        <a href="https://wa.me/+917351760788?text=I%20Reach%20You%20Through%20your%20Website
+    " class="entypo-twitter"><span>Whatsapp</span><i class="bi bi-whatsapp"></i></a>
+    </li>
+
+    <li>
+        <a href="https://www.facebook.com/shuyaib.khan.1" class="entypo-facebook"><span>Facebook</span><i
+                class="bi bi-facebook"></i></a>
+    </li>
+    <li>
+        <a href="mailto:someone@yoursite.com?subject=Mail from Our Site" class="entypo-gplus"><span>Google+</span><i
+                class="bi bi-google"></i></a>
+    </li>
+
+    <li>
+        <a href="https://www.instagram.com/shuyaibkhan/" class="entypo-instagram"><span>Instagram</span><i
+                class="bi bi-instagram"></i></a>
+    </li>
+    <li>
+        <a href="https://www.linkedin.com/in/mohd-shoaib-khan-309537246"
+            class="entypo-evernote"><span>Linkdin</span><i class="bi bi-linkedin"></i></a>
+    </li>
+
+
+</ul>
+
 
    
  <!-- Service Start -->
